--- a/NoteSharingCenter.Sample/Views/Shared/_PartialCategories.cshtml
+++ b/NoteSharingCenter.Sample/Views/Shared/_PartialCategories.cshtml
@@ -2,7 +2,7 @@
 @using NoteSharingCenter.Entity
 @{
     CategoryRepository cr = new CategoryRepository();
-    List<Category> list = cr.GetCategories();
+    List<Category> list = cr.List();
 }
 
 <aside class="sidebar mt-2 ml-2">
