--- a/NoteSharingCenter.Sample/Views/Home/ShowProfile.cshtml
+++ b/NoteSharingCenter.Sample/Views/Home/ShowProfile.cshtml
@@ -40,7 +40,7 @@
 
         <div class="col-md-2">
             <a href="~/Home/EditProfile/@Model.Id" class="btn btn-outline-success btn-lg btn-block">Edit Profile</a>
-            <a href="~/Home/DeleteProfile/@Model.Id" class="btn btn-outline-danger btn-sm btn-block" onclick="return confirm('Hesabınızı silmek istediğinize emin misiniz?')">Delete Profile</a>
+            <a href="~/Home/DeleteProfile/@Model.Id" class="btn btn-outline-danger btn-sm btn-block" onclick="return confirm('Are you sure you want to delete your account?')">Delete Profile</a>
         </div>
 
     </div>
