--- a/NoteSharingCenter.Sample/Views/Note/Index.cshtml
+++ b/NoteSharingCenter.Sample/Views/Note/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<NoteSharingCenter.Entity.Users>
+﻿@model IEnumerable<NoteSharingCenter.Entity.Note>
 
 @{
     ViewBag.Title = "Index";
@@ -57,7 +57,7 @@
                         <div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h4>Category</h4>
+                                    <h4>My Notes</h4>
                                 </div>
                                 <div class="col-md-6">
                                     <p class="text-right pt-3">
@@ -73,38 +73,30 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>Name</th>
-                                    <th>Surname</th>
-                                    <th>Username</th>
-                                    <th>Email</th>
-                                    <th>Password</th>
-                                    <th>AboutMe</th>
-                                    <th>IsActive</th>
-                                    <th>IsAdmin</th>
-                                    <th>ModifiedUsername</th>
+                                    <th>Title</th>
+                                    <th>Text</th>
+                                    <th>Category</th>
+                                    <th>Is Draft</th>
+                                    <th>LikeCount</th>
                                 </tr>
                             </thead>
                             <tbody>
 
                                 @foreach (var item in Model)
                                 {
-                                    <tr>
-                                        <td>@a</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Surname)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Username)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Email)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Password)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.AboutMe)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.IsActive)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.IsAdmin)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.ModifiedUsername)</td>
-                                        <td class="actions">
-                                            <a href="~/User/Edit/@item.Id"><i class="fas fa-pencil-alt"></i></a>
-                                            <a href="~/User/Details/@item.Id"><i class="far fa-eye"></i></a>
-                                            <a href="~/User/Delete/@item.Id" class="delete-row" onclick="return confirm('Are you sure you want to delete the user?')"><i class="far fa-trash-alt"></i></a>
-                                        </td>
-                                    </tr>
+                                <tr>
+                                    <td>@a</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Title)</td>
+                                    <td style="width:320px;">@Html.DisplayFor(modelItem => item.Text)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Category.Title)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.IsDraft)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.LikeCount)</td>
+                                    <td class="actions">
+                                        <a href="~/Note/Edit/@item.Id"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="~/Note/Details/@item.Id"><i class="far fa-eye"></i></a>
+                                        <a href="~/Note/Delete/@item.Id" class="delete-row" onclick="return confirm('Are you sure you want to delete the note?')"><i class="far fa-trash-alt"></i></a>
+                                    </td>
+                                </tr>
                                     a++;
                                 }
 
