--- a/NoteSharingCenter.Sample/Views/Note/Edit.cshtml
+++ b/NoteSharingCenter.Sample/Views/Note/Edit.cshtml
@@ -48,9 +48,9 @@
     <section class="body container">
 
         <section role="main" class="content-body card-margin">
-            @using (Html.BeginForm())
+            @using (Html.BeginForm("Edit", "Note", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
-
+                @Html.HiddenFor(model => model.NoteImageFilename)
                 <div class="row">
 
                     <div class="col-md-12">
@@ -58,6 +58,35 @@
                         <hr />
                         @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                         @Html.AntiForgeryToken()
+
+                        <div class="form-group row">
+                            <label class="col-lg-2 control-label text-lg-right pt-5" for="inputDefault">Image</label>
+                            <div class="col-lg-6">
+                                <div class="thumbnail-gallery">
+                                    <a class="img-thumbnail lightbox" href="~/Content/img/@Model.NoteImageFilename" data-plugin-options='{ "type":"image" }'>
+                                        <img class="img-fluid" width="215" src="~/Content/img/@Model.NoteImageFilename">
+                                        <span class="zoom">
+                                            <i class="fas fa-search"></i>
+                                        </span>
+                                    </a>
+                                </div>
+                                <div class="fileupload fileupload-new" data-provides="fileupload" placeholder="Hover me" title="" data-toggle="tooltip" data-trigger="hover" data-original-title="Please use jpg, jpeg or png format." id="inputTooltip" aria-describedby="tooltip39506">
+                                    <div class="input-append">
+                                        <div class="uneditable-input">
+                                            <i class="fas fa-file fileupload-exists"></i>
+                                            <span class="fileupload-preview"></span>
+                                        </div>
+                                        <span class="btn btn-default btn-file">
+                                            <span class="fileupload-exists">Change</span>
+                                            <span class="fileupload-new">Select file</span>
+                                            <input type="file" name="ProfileImage" />
+                                        </span>
+                                        <a href="#" class="btn btn-default fileupload-exists" data-dismiss="fileupload">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="form-group row">
                             <label class="col-lg-2 control-label text-lg-right pt-2" for="inputDefault">Title</label>
                             <div class="col-lg-6">
