--- a/NoteSharingCenter.Sample/Views/Note/Index.cshtml
+++ b/NoteSharingCenter.Sample/Views/Note/Index.cshtml
@@ -73,6 +73,7 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
+                                    <th>Images</th>
                                     <th>Title</th>
                                     <th>Text</th>
                                     <th>Category</th>
@@ -84,19 +85,22 @@
 
                                 @foreach (var item in Model)
                                 {
-                                <tr>
-                                    <td>@a</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Title)</td>
-                                    <td style="width:320px;">@Html.DisplayFor(modelItem => item.Text)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Category.Title)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.IsDraft)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.LikeCount)</td>
-                                    <td class="actions">
-                                        <a href="~/Note/Edit/@item.Id"><i class="fas fa-pencil-alt"></i></a>
-                                        <a href="~/Note/Details/@item.Id"><i class="far fa-eye"></i></a>
-                                        <a href="~/Note/Delete/@item.Id" class="delete-row" onclick="return confirm('Are you sure you want to delete the note?')"><i class="far fa-trash-alt"></i></a>
-                                    </td>
-                                </tr>
+                                    <tr>
+                                        <td>@a</td>
+                                        <td>
+                                            <img class="img-fluid" src="~/Content/img/@item.NoteImageFilename" width="145"> 
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.Title)</td>
+                                        <td style="width:320px;">@Html.DisplayFor(modelItem => item.Text)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Category.Title)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.IsDraft)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.LikeCount)</td>
+                                        <td class="actions">
+                                            <a href="~/Note/Edit/@item.Id"><i class="fas fa-pencil-alt"></i></a>
+                                            <a href="~/Note/Details/@item.Id"><i class="far fa-eye"></i></a>
+                                            <a href="~/Note/Delete/@item.Id" class="delete-row" onclick="return confirm('Are you sure you want to delete the note?')"><i class="far fa-trash-alt"></i></a>
+                                        </td>
+                                    </tr>
                                     a++;
                                 }
 
