--- a/NoteSharingCenter.Sample/Views/Home/NoteDetail.cshtml
+++ b/NoteSharingCenter.Sample/Views/Home/NoteDetail.cshtml
@@ -19,7 +19,6 @@
                         </a>
                     </div>
 
-
                     <div class="post-content ml-0">
 
                         <h2 class="font-weight-bold"><a href="#">@Html.DisplayFor(x => x.Title)</a></h2>
@@ -33,7 +32,7 @@
 
 
 
-                        @Html.Partial("_Comments")
+                        @Html.Partial("_Comments", Model)
 
                     </div>
                 </article>
