--- a/NoteSharingCenter.Sample/Views/Shared/_HomePage.cshtml
+++ b/NoteSharingCenter.Sample/Views/Shared/_HomePage.cshtml
@@ -197,43 +197,6 @@
     
 </body>
 </html>
-@*<script>
-    $(function () {
-
-        var noteids = [];
-
-        $("div[data-note-id]").each(function (i, e) {
-
-            noteids.push($(e).data("note-id"));
-
-        });
-        console.log(noteids);
-        $.ajax({
-            method: "POST",
-            url: "/Note/GetLiked",
-            data: { ids: noteids }
-        }).done(function (data) {
-
-            console.log(data);
-            if (data.result != null && data.result.length > 0) {
-                for (var i = 0; i < data.result.length; i++) {
-                    var id = data.result[i];
-                    var likedNote = $("div[data-note-id=" + id + "]");
-                    var btn = likedNote.find("button[data-liked]");
-                    var span = btn.children().first();
-
-                    btn.data("liked", true);
-                    span.removeClass("far fa-star");
-                    span.addClass("fas fa-star");
-                }
-            }
-        }).fail(function () {
-
-        });
-
-
-    });
-</script>*@
 
 <script>
     $(function () {
@@ -278,16 +241,11 @@
             var spanStar = btn.find("span.like-star");
             var spanCount = btn.find("span.like-count");
 
-            console.log(liked);
-            console.log("like count : " + spanCount.text());
-
             $.ajax({
                 method: "POST",
                 url: "/Note/SetLikeState",
                 data: { "noteid": noteid, "liked": !liked }
             }).done(function (data) {
-
-                console.log(data);
 
                 if (data.hasError) {
                     alert(data.errorMessage);
@@ -295,10 +253,6 @@
                     liked = !liked;
                     btn.data("liked", liked);
                     spanCount.text(data.result);
-
-                    console.log("like count(after) : " + spanCount.text());
-
-
                     spanStar.removeClass("fas fa-star");
                     spanStar.removeClass("far fa-star");
 
@@ -311,7 +265,7 @@
                 }
 
             }).fail(function () {
-                alert("Sunucu ile bağlantı kurulamadı.");
+                alert("Connection to the server failed.");
             })
 
         });
