--- a/NoteSharingCenter.Sample/Views/Home/Index.cshtml
+++ b/NoteSharingCenter.Sample/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                                 <span class="far fa-star like-star"></span> 
                                 <span class="like-count">@item.LikeCount</span>
                             </button>
-                            <button type="button" class="mb-1 mt-1 mr-1 btn btn-outline btn-info btn-sm"><i class="far fa-comments"></i> Comments</button>
+                            <a href="~/Home/NoteDetail/@item.Id" class="mb-1 mt-1 mr-1 btn btn-outline btn-info btn-sm"><i class="far fa-comments"></i> Comments</a>
                         </div>
                     </div>
                 </div>
@@ -57,5 +57,4 @@
         }
     </div>
 </div>
-
 
