--- a/NoteSharingCenter.Sample/Views/Home/NoteDetail.cshtml
+++ b/NoteSharingCenter.Sample/Views/Home/NoteDetail.cshtml
@@ -14,7 +14,7 @@
                 <article class="post post-large blog-single-post border-0 m-0 p-0">
 
                     <div class="post-image ml-0">
-                        <a href="blog-post.html">
+                        <a href="#">
                             <img src="~/Content/img/@Model.NoteImageFilename" class="img-fluid img-thumbnail img-thumbnail-no-borders rounded-0" alt="" />
                         </a>
                     </div>
