--- a/NoteSharingCenter.Sample/Views/Home/Register.cshtml
+++ b/NoteSharingCenter.Sample/Views/Home/Register.cshtml
@@ -48,7 +48,7 @@
                     @using (Html.BeginForm())
                     {
                         <div class="form-group mb-3">
-                            <label>Name</label>
+                            <label>Username</label>
                             @Html.TextBoxFor(model => model.Username, new { @class = "form-control form-control-lg" })
                         </div>
 
@@ -75,7 +75,7 @@
                                 @Html.ValidationSummary(false)
                             </div>
                             <div class="col-sm-4 text-right">
-                                <button type="submit" class="btn btn-primary mt-2">Sign In</button>
+                                <button type="submit" class="btn btn-primary mt-2">Sign Up</button>
                             </div>
                         </div>
 
